fixed fonts in text boxes to typewriter, cleaned spacing on create page

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -110,7 +110,7 @@
     padding: 12px 20px;
     margin: 8px 0;
     box-sizing: border-box;
-    font-family: Sans-Serif;
+    font-family: American Typewriter, serif;
     border: 3px solid #ccc;
     -webkit-transition: 0.5s;
     transition: 0.5s;
